oppdaterer til java 21, og oppdaterer diverse avhengigheter